force-app/main/default/objects/Permit__c/Permit__c.object-meta.xml
<CustomObject>
    <label>Permit</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Permit Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Permits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>