force-app/main/default/objects/Permit__c/fields/Approved_Application__c.field-meta.xml
<CustomField>
    <fullName>Approved_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approved Application</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Permits</relationshipLabel>
    <relationshipName>Application_Permits</relationshipName>
    <type>Lookup</type>
</CustomField>