force-app/main/default/objects/Permit__c/fields/NSCP_Permit_Id__c.field-meta.xml
<CustomField>
    <fullName>NSCP_Permit_Id__c</fullName>
    <label>Permit ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>