force-app/main/default/objects/Permit__c/fields/Permit_Name__c.field-meta.xml
<CustomField>
    <fullName>Permit_Name__c</fullName>
    <label>Permit Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Drug Administration Technical Permit</fullName>
            </value>
            <value>
                <fullName>Drug Injection Permit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>