force-app/main/default/objects/Permit__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Permit_Name__c</columns>
    <columns>Registrant__c</columns>
    <columns>Registrant_Type__c</columns>
    <columns>Approved_Application__c</columns>
    <columns>Registration__c</columns>
    <columns>Granted_Date__c</columns>
    <columns>Valid_To__c</columns>
    <columns>Valid_From__c</columns>
    <columns>Expiry_Date__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>