force-app/main/default/objects/Permit__c/listViews/Permits.listView-meta.xml
<ListView>
    <fullName>Permits</fullName>
    <columns>NAME</columns>
    <columns>Granted_Date__c</columns>
    <columns>Expiry_Date__c</columns>
    <columns>Registration__c</columns>
    <columns>Type__c</columns>
    <columns>Approved_Application__c</columns>
    <filterScope>Everything</filterScope>
    <label>Permits</label>
</ListView>